# frittura-ssh

./: Cargo.toml  README.md  games.toml
crates/frittura-ssh-core/: Cargo.toml
crates/frittura-ssh-core/src/: lib.rs  writer.rs
crates/frittura-ssh-hub/: Cargo.toml
crates/frittura-ssh-hub/src/: config.rs  identity.rs  lib.rs  main.rs  tui.rs  ui.rs
crates/frittura-ssh-hub/src/ssh/: bridge.rs  server.rs  session.rs
src/: lib.rs  main.rs  tui.rs
src/core/: channel.rs  client.rs  input.rs  server.rs  trait_def.rs  writer.rs
src/ssh/: bridge.rs  server.rs  session.rs
