[package]
name = "sshhub"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[features]
default = ["bin"]
# Trait + helpers only. What downstream game crates pull in.
core = []
# Hub binary deps (lobby UI, bridge, TOML loader, log4rs, clap, etc).
bin = ["core", "dep:directories", "dep:log4rs", "dep:clap", "dep:toml", "dep:serde"]

[dependencies]
anyhow = "1.0.102"
crossterm = { version = "0.29", default-features = false, features = ["events"] }
log = "0.4.27"
rand = { version = "0.10.1", default-features = false, features = ["std", "std_rng", "thread_rng"] }
ratatui = { version = "0.30.0", features = ["unstable-backend-writer"] }
russh = "0.60.1"
tokio = { version = "1.52.1", default-features = false, features = ["rt-multi-thread", "time", "macros", "sync", "net", "io-util"] }

# Bin-only deps:
clap = { version = "4.6.1", default-features = false, features = ["std", "derive", "help", "usage", "error-context"], optional = true }
directories = { version = "6.0.0", optional = true }
log4rs = { version = "1.4.0", default-features = false, features = ["file_appender", "pattern_encoder"], optional = true }
serde = { version = "1.0.214", default-features = false, features = ["std", "derive"], optional = true }
toml = { version = "0.9.0", default-features = false, features = ["parse", "serde"], optional = true }

[[bin]]
name = "sshhub"
required-features = ["bin"]
